<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_name"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_height"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_mass"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/mass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_hair_color"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/hair_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_skin_color"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/skin_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_eye_color"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/eye_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_birth_year"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/birth_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_gender"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_homeworld"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/homeworld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/text_color_blue"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_films"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/films"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_species"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_vehicles"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/vehicles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_starships"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/starships"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_created"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_edited"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/txt_url"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/text_color_blue"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>